# Prompt_X-ray

./: .env  Dockerfile  README.md  agent_config.yaml  docker-compose.yml  embedder.py  emm.py  index.html  main.py  nginx.conf  pyproject.toml  send.py  test.py  wynik.csv
Test/: 1st-line-support-Authorized-User.md  Expert-Customer-Panel-Support.md  Expert-DirectAdmin-hosting-tech-support.md  Expert-First-Contact-Customer-Assistant-Authorized_User-PATCHED.md  Expert-First-Contact-Customer-Assistant-Authorized_User.md  Expert-Full-Stack-Programmer-And-File-Operations-Specialist.md
