[project]
name = "prompt-x-ray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
